downgrade to 2.7.9 and java 11